Fixed cookie text overlapping in some languages.

--- a/bk-less-framework-v8.less
+++ b/bk-less-framework-v8.less
@@ -1926,8 +1926,6 @@ body:after {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    font-family: 'Helvetica', Arial, sans-serif;
-    font-weight: 400;
     bottom: 10px;
     left: 0;
     right: 0;
@@ -1938,6 +1936,15 @@ body:after {
     width: 95%;
     z-index: 2147483647;
 
+    p,
+    a {
+        font-family: 'Helvetica', Arial, sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.5;
+    }
+
+
     p {
         color: white;
         padding: 0.5em 1em;
@@ -1947,10 +1954,6 @@ body:after {
         }
     }
 
-    p, a {
-        font-size: 15px;
-        line-height: 23px;
-    }
 
     @media @tablet {
         text-align: left;
@@ -1965,6 +1968,7 @@ body:after {
         width: 100%;
     }
 
+
     .bk-cookie-close-button {
         -ms-flex-item-align: start;
         align-self: flex-start;
@@ -1976,16 +1980,11 @@ body:after {
         transition: color 0.5s ease;
 
         @media @tablet {
-            font-size: 18px;
             color: white;
         }
 
-        @media only screen and (max-width: 422px) {
-            font-size: 16px;
-            line-height: 1em;
-        }
-
-        &:hover, &:focus {
+        &:hover,
+        &:focus {
             color: white;
             text-decoration: none;
         }
