--- a/bkl-dev.less
+++ b/bkl-dev.less
@@ -2254,8 +2254,6 @@ body:after {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    font-family: 'Helvetica', Arial, sans-serif;
-    font-weight: 400;
     bottom: 10px;
     left: 0;
     right: 0;
@@ -2266,6 +2264,15 @@ body:after {
     width: 95%;
     z-index: 2147483647;
 
+    p,
+    a {
+        font-family: 'Helvetica', Arial, sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.5;
+    }
+
+
     p {
         color: white;
         padding: 0.5em 1em;
@@ -2275,10 +2282,6 @@ body:after {
         }
     }
 
-    p, a {
-        font-size: 15px;
-        line-height: 23px;
-    }
 
     @media @tablet {
         text-align: left;
@@ -2293,6 +2296,7 @@ body:after {
         width: 100%;
     }
 
+
     .bk-cookie-close-button {
         -ms-flex-item-align: start;
         align-self: flex-start;
@@ -2304,16 +2308,11 @@ body:after {
         transition: color 0.5s ease;
 
         @media @tablet {
-            font-size: 18px;
             color: white;
         }
 
-        @media only screen and (max-width: 422px) {
-            font-size: 16px;
-            line-height: 1em;
-        }
-
-        &:hover, &:focus {
+        &:hover,
+        &:focus {
             color: white;
             text-decoration: none;
         }
